Display random color when etching

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     background-color: grey;
 }
 #container{
-    margin: 0 auto;
+    margin: 20px auto;
     height: 650px;
     width: 650px;
     background-color: white;
@@ -20,7 +20,7 @@
 }
 
 #gridSize {
-    height: 30px;
+    height: 40px;
     width: 100px;
     margin-top: 50px;
     font-size: 16px;
