--- a/style.css
+++ b/style.css
@@ -3,8 +3,20 @@
     text-align: center;
     background-color: grey;
 }
+
+#wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+#buttons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #container{
-    margin: 20px auto;
+    margin: 20px 50px;
     height: 650px;
     width: 650px;
     background-color: white;
@@ -32,4 +44,5 @@
 
 h1 {
     margin-top: 20px;
+    padding-left: 100px;
 }
